tdf#117301 dbahsql: add FLOAT type

Change-Id: I2a7227c40d8df6347c014cf720369384b92e3970